Grid layout issue fixed

--- a/assets/css/jobwp-front.css
+++ b/assets/css/jobwp-front.css
@@ -21,7 +21,8 @@
     border: 0px solid #000;
     display: block;
     width: 100%;
-    margin-bottom: 10px;
+    margin: 0 auto;
+    max-width: 1150px;
 }
 
 .jobwp-total-jobs-found .jobwp-total-jobs-found-total {
